Adding Store menu

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet" />	
+	<link href="css/style.css" rel="stylesheet" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,10 +22,10 @@
     <![endif]-->
   </head>
   <body>
-	<header>		
+	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="navigation">
-				<div class="container">					
+				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
 							<span class="sr-only">Toggle navigation</span>
@@ -37,45 +37,46 @@
 							<a href="index.html"><img src="images/partners/logo@2x.png" alt="RobôCIn" ></a>
 						</div>
 					</div>
-					
-					<div class="navbar-collapse collapse">							
+
+					<div class="navbar-collapse collapse">
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation"><a href="index.html" >Home</a></li>
+                <li role="presentation"><a href="https://robocin.lojaintegrada.com.br/">Store</a></li>
 								<li role="presentation"><a href="categories.html">Categories</a></li>
-								<li role="presentation"><a href="publications.html">Publications</a></li>								
+								<li role="presentation"><a href="publications.html">Publications</a></li>
 								<li role="presentation"><a href="team.html" >Team</a></li>
 								<li role="presentation"><a href="projects.html">Projects</a></li>
-								<li role="presentation"><a href="contact.html" class="active">Contact</a></li>								
+								<li role="presentation"><a href="contact.html" class="active">Contact</a></li>
 							</ul>
 						</div>
-					</div>						
+					</div>
 				</div>
-			</div>	
-		</nav>		
+			</div>
+		</nav>
 	</header>
-	
+
 	<div id="breadcrumb">
-		<div class="container">	
-			<div class="breadcrumb">							
+		<div class="container">
+			<div class="breadcrumb">
 				<li><a href="index.html">Home</a></li>
-				<li>Contact</li>			
-			</div>		
-		</div>	
+				<li>Contact</li>
+			</div>
+		</div>
 	</div>
-	
+
 	<div class="map">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.4483689200183!2d-34.9537666846153!3d-8.055662782710595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1be2115430ab%3A0x20ceccca91a11dd3!2sCIn+-+Centro+de+Inform%C3%A1tica+-+UFPE!5e0!3m2!1spt-BR!2sbr!4v1546961185160" width="2000" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</iframe>
 	</div>
-	
+
 	<section id="contact-page">
         <div class="container">
-            <div class="center">        
+            <div class="center">
                 <h2>Drop Your Message</h2>
 				<p>Contact us using the form below.</p>
-            </div> 
-            <div class="row contact-wrap"> 
+            </div>
+            <div class="row contact-wrap">
                 <div class="status alert alert-success" style="display: none"></div>
                 <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="https://formspree.io/robocin@cin.ufpe.br">
                     <div class="col-sm-5 col-sm-offset-1">
@@ -94,7 +95,7 @@
                         <div class="form-group">
                             <label>Company Name</label>
                             <input type="text" class="form-control">
-                        </div>                        
+                        </div>
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
@@ -104,16 +105,16 @@
                         <div class="form-group">
                             <label>Message *</label>
                             <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
-                        </div>                        
+                        </div>
                         <div class="form-group">
                             <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Submit Message</button>
                         </div>
                     </div>
-                </form> 
+                </form>
             </div><!--/.row-->
         </div><!--/.container-->
     </section><!--/#contact-page-->
-	
+
 	<footer>
 		<div class="footer">
 			<div class="container">
@@ -125,35 +126,35 @@
 							<li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
 							<li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 							<li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
-						</ul>	
+						</ul>
 					</div>
 				</div>
-				
+
 				<div class="col-md-4 col-md-offset-4">
 					<div class="copyright">
 						&copy; June  2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
 					</div>
-                    <!-- 
-                        All links in the footer should remain intact. 
+                    <!--
+                        All links in the footer should remain intact.
                         Licenseing information is available at: http://bootstraptaste.com/license/
                         You can buy this theme without footer links online at: http://bootstraptaste.com/buy/?theme=Company
                     -->
-				</div>						
+				</div>
 			</div>
 			<div class="pull-right">
 				<a href="#home" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
 			</div>
 		</div>
 	</footer>
-	
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/jquery-2.1.1.min.js"></script>	
+	<script src="js/jquery-2.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/jquery.isotope.min.js"></script>  
+    <script src="js/jquery.isotope.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/functions.js"></script>
-	
+
   </body>
 </html>
