--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet" />	
+	<link href="css/style.css" rel="stylesheet" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,10 +23,10 @@
     <![endif]-->
   </head>
   <body>
-	<header>		
+	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="navigation">
-				<div class="container">					
+				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
 							<span class="sr-only">Toggle navigation</span>
@@ -38,26 +38,27 @@
 								<a href="index.html"><img src="images/partners/logo@2x.png" alt="RobôCIn" ></a>
 						</div>
 					</div>
-					
-					<div class="navbar-collapse collapse">							
+
+					<div class="navbar-collapse collapse">
 						<div class="menu">
 							<ul class="nav nav-tabs " role="tablist">
-								<li role="presentation"><a href="index.html" class="active">Home</a></li>
+                <li role="presentation"><a href="index.html" class="active">Home</a></li>
+								<li role="presentation"><a href="https://robocin.lojaintegrada.com.br/">Store</a></li>
 								<li role="presentation"><a href="categories.html">Categories</a></li>
-								<li role="presentation"><a href="publications.html">Publications</a></li>								
+								<li role="presentation"><a href="publications.html">Publications</a></li>
 								<li role="presentation"><a href="team.html">Team</a></li>
 								<li role="presentation"><a href="projects.html">Projects</a></li>
-								<li role="presentation"><a href="contact.html">Contact</a></li>						
+								<li role="presentation"><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
-					</div>						
+					</div>
 				</div>
-			</div>	
-		</nav>		
+			</div>
+		</nav>
 	</header>
-	
+
 	<section id="main-slider" class="no-margin">
-        <div class="carousel slide">      
+        <div class="carousel slide">
             <div class="carousel-inner">
                 <div class="item active" style="background-image: url(images/slider/equipe_2018.jpg);background-position: top;">
                     <div class="container">
@@ -71,7 +72,7 @@
 
                         </div>
                     </div>
-                </div><!--/.item-->             
+                </div><!--/.item-->
             </div><!--/.carousel-inner-->
         </div><!--/.carousel-->
 	</section><!--/#main-slider-->
@@ -81,28 +82,28 @@
 			<div class="text-center">
 				<div class="col-md-3">
 					<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" >
-						<i class="fa fa-book"></i>	
+						<i class="fa fa-book"></i>
 						<h2>Full Responsive</h2>
 						<p>Quisque eu ante at tortor imperdiet gravida nec sed turpis phasellus.</p>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
-						<i class="fa fa-laptop"></i>	
+						<i class="fa fa-laptop"></i>
 						<h2>Retina Ready</h2>
 						<p>Quisque eu ante at tortor imperdiet gravida nec sed turpis phasellus.</p>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" >
-						<i class="fa fa-heart-o"></i>	
+						<i class="fa fa-heart-o"></i>
 						<h2>Full Responsive</h2>
 						<p>Quisque eu ante at tortor imperdiet gravida nec sed turpis phasellus.</p>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" >
-						<i class="fa fa-cloud"></i>	
+						<i class="fa fa-cloud"></i>
 						<h2>Friendly Code</h2>
 						<p>Quisque eu ante at tortor imperdiet gravida nec sed turpis phasellus.</p>
 					</div>
@@ -117,7 +118,7 @@
 				<h2>About us</h2>
 				<iframe width="100%" height="300px" src="https://www.youtube.com/embed/_c9QNyWlv7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			
+
 			<div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
 				<br><br><br><br><br>
 				<p>RobôCIn is a research group of the Infomatics Center at UFPE, which resolve problems using robotics. The group was created in 2015 by 12 students and the professors Edna Barros and Hansenclever Bassani.Today we count with 36 students and 4 the professors to coordinate the team to reach innovative solutions using A.I., computer vision, mechanics and electronics combined in robots.</p>
@@ -133,27 +134,27 @@
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/4.jpg" class="img-responsive"/>
 				<h3>Template built with Twitter Bootstrap</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				</p>
 			</div>
-			
+
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 				<img src="images/4.jpg" class="img-responsive"/>
 				<h3>Template built with Twitter Bootstrap</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				</p>
 			</div>
-			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">				
+
+			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 				<img src="images/4.jpg" class="img-responsive"/>
 				<h3>Template built with Twitter Bootstrap</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat 
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum erat
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
 				libero, pulvinar tincidunt leo consectetur eget. Curabitur lacinia pellentesque
