--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet" />	
+	<link href="css/style.css" rel="stylesheet" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,10 +23,10 @@
     <![endif]-->
   </head>
   <body>
-	<header>		
+	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="navigation">
-				<div class="container">					
+				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
 							<span class="sr-only">Toggle navigation</span>
@@ -38,33 +38,34 @@
 								<a href="index.html"><img src="images/partners/logo@2x.png" alt="RobôCIn" ></a>
 						</div>
 					</div>
-					
-					<div class="navbar-collapse collapse">							
+
+					<div class="navbar-collapse collapse">
 						<div class="menu">
 							<ul class="nav nav-tabs " role="tablist">
 								<li role="presentation"><a href="index.html">Home</a></li>
+                <li role="presentation"><a href="https://robocin.lojaintegrada.com.br/">Store</a></li>
 								<li role="presentation"><a href="categories.html">Categories</a></li>
-								<li role="presentation"><a href="publications.html"  class="active">Publications</a></li>								
+								<li role="presentation"><a href="publications.html"  class="active">Publications</a></li>
 								<li role="presentation"><a href="team.html">Team</a></li>
 								<li role="presentation"><a href="projects.html">Projects</a></li>
-								<li role="presentation"><a href="contact.html">Contact</a></li>						
+								<li role="presentation"><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
-					</div>						
+					</div>
 				</div>
-			</div>	
-		</nav>		
+			</div>
+		</nav>
 	</header>
-	
+
 	<div id="breadcrumb">
-		<div class="container">	
-			<div class="breadcrumb">							
+		<div class="container">
+			<div class="breadcrumb">
 				<li><a href="index.html">Home</a></li>
-				<li>Publications</li>			
-			</div>		
-		</div>	
+				<li>Publications</li>
+			</div>
+		</div>
 	</div>
-	
+
 	<div class="services">
 		<div class="container">
 			<h3>Team Description Papers</h3>
@@ -80,54 +81,54 @@
 				<br>
 				<h4> 5. <a href="archives/tdpVss2016.pdf" target="blank">RobôCIn Very Small Size Soccer</a> for LARC 2016 </h4>
 			</div>
-			
-			
-		</div>
-	</div>	
-	
 
-	
-	
+
+		</div>
+	</div>
+
+
+
+
 	<footer>
 		<div class="footer">
 			<div class="container">
 				<div class="social-icon">
 					<div class="col-md-4">
-						<ul class="social-network"> 
+						<ul class="social-network">
 							<li><a href="https://www.facebook.com/robocin/" target="blank" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="https://www.instagram.com/robocinufpe/" target="blank" class=" tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="https://github.com/robocin" class="tool-tip" target="blank" title="GitHub"><i class="fa fa-github"></i></a></li>
 							<li><a href="https://www.youtube.com/watch?v=_c9QNyWlv7k" target="blank" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
-						</ul>	
+						</ul>
 					</div>
 				</div>
-				
+
 				<div class="col-md-4 col-md-offset-4">
 					<div class="copyright">
 						&copy; December  2018 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
 					</div>
-                    <!-- 
-                        All links in the footer should remain intact. 
+                    <!--
+                        All links in the footer should remain intact.
                         Licenseing information is available at: http://bootstraptaste.com/license/
                         You can buy this theme without footer links online at: http://bootstraptaste.com/buy/?theme=Company
                     -->
-				</div>						
+				</div>
 			</div>
-			
+
 			<div class="pull-right">
 				<a href="#home" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
-			</div>		
+			</div>
 		</div>
 	</footer>
-	
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/jquery-2.1.1.min.js"></script>	
+	<script src="js/jquery-2.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/jquery.isotope.min.js"></script>  
+    <script src="js/jquery.isotope.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/functions.js"></script>
-	
+
   </body>
 </html>
