Responsive partners in progress

--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
                 <h2>Our Partners</h2>
             </div>
 
-            <div class="partners">
-                <ul>
-                    <li> <a href="https://www2.cin.ufpe.br/site/index.php" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/cin.png" width=100%></a></li>
-                    <li> <a href="https://inloco.com.br/pt/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/inloco.png" width=100%></a></li>
-                    <li> <a href="https://www.informa.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/informa.png" width=100%></a></li>
-	                  <li> <a href="http://www.hsbs.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/HSBS.png" width=100%></a></li>
-	                  <li> <a href="https://lierretextil.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/lierre.png" width=100%></a></li>
-                </ul>
+            <div class="center">
+                <!-- <ul> -->
+                    <div class="resp_partners"> <a href="https://www2.cin.ufpe.br/site/index.php" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/cin.png" width=100%></a></div>
+                    <div class="resp_partners"> <a href="https://inloco.com.br/pt/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/inloco.png" width=100%></a></div>
+                    <div class="resp_partners"> <a href="https://www.informa.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/informa.png" width=100%></a></div>
+	                  <div class="resp_partners"> <a href="http://www.hsbs.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/HSBS.png" width=100%></a></div>
+	                  <div class="resp_partners"> <a href="https://lierretextil.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/lierre.png" width=100%></a></div>
+                <!-- </ul> -->
             </div>
         </div><!--/.container-->
     </section><!--/#partner-->
