--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="navbar-brand d-flex flex-fill">
-                                <a href="index.html"><img src="images/partners/logo@2x.png" alt="RobôCIn" ></a>
+                                <a href="index.html"><img src="images/partners/robocin-logo.png" alt="RobôCIn" ></a>
                         </div>
                     </div>
 
