--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="index.html"><img src="images/partners/logo@2x.png" alt="RobôCIn" ></a>
+							<a href="index.html"><img src="images/partners/robocin-logo.png" alt="RobôCIn" ></a>
 						</div>
 					</div>
 
