--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
 			</ol>
 
 
-			<div class="carousel-inner">
+			<div class="carousel-inner" >
+				<div class="item active" style="background-position: top;">
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSeALxwCre6ekVlJAnyUYBowNQANBwKBqCH5d22EZd3_Wl6yFw/viewform" target="_blank">
-				<div class="item active" style="background-image: url(images/slider/banner_site_v6.png);background-position: top;"></div>
-			</a>
+						<img src="images/slider/banner_site_v6.png"/>
+					</a>
+				</div>
                 <div class="item" style="background-image: url(images/slider/equipe_2018.jpg);background-position: top;">
                     <div class="container">
                         <div class="row slide-margin">
