Update categories descriptions

--- a/categories.html
+++ b/categories.html
@@ -204,6 +204,22 @@
 			<div class="col-md-7 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/categories/2dph1.png" class="img-responsive">
 				<p>
+					In the 2D Simulation League, 
+					two teams of eleven autonomous software programs 
+					(called agents) each play soccer in a two-dimensional 
+					virtual soccer stadium represented by a central server, 
+					called SoccerServer. This server knows everything about 
+					the game, i.e. the current position of all players and 
+					the ball, the physics and so on. The game further relies 
+					on the communication between the server and each agent. 
+					On the one hand each player receives relative and noisy 
+					input of his virtual sensors (visual, acoustic and 
+					physical) and may on the other hand perform some basic 
+					commands (like dashing, turning or kicking) in order to 
+					influence its environment.
+					<br>
+				Retrieved from : <a href="https://www.robocup.org/leagues/7" target="blank">https://www.robocup.org/leagues/7</a>.
+				<br>
 				</p>
 			</div>
 			<div class="col-md-5 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -225,6 +241,15 @@
 			<div class="col-md-7 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/categories/@homeph1.png" class="img-responsive">
 				<p>
+					The RoboCup@Home league aims to develop service and assistive
+					robot technology with high relevance for future personal
+					domestic applications. It is the largest international 
+					annual competition for autonomous service robots and is
+					part of the RoboCup initiative. A set of benchmark tests 
+					is used to evaluate the robots’ abilities and performance 
+					in a realistic non-standardized home environment setting.
+				<br>Retrieved from : <a href="https://athome.robocup.org/" target="blank">https://athome.robocup.org/</a>.
+				<br>
 				</p>
 			</div>
 			<div class="col-md-5 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
