--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 	<section id="main-slider" class="no-margin">
         <div class="carousel slide" id="myCarousel"  data-ride="carousel">
 			<ol class="carousel-indicators">
+				<!-- <li data-target="#myCarousel" data-slide-to="0" class="active"></li> -->
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
 			</ol>
 
 
 			<div class="carousel-inner" >
-				<div class="item active" style="background-position: top;">
+				<!-- <div class="item active" style="background-position: top;">
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSeALxwCre6ekVlJAnyUYBowNQANBwKBqCH5d22EZd3_Wl6yFw/viewform" target="_blank">
 						<img src="images/slider/banner_site_v8.png"/>
 					</a>
-				</div>
-                <div class="item" style="background-image: url(images/slider/equipe_2018.jpg);background-position: top;">
+				</div> -->
+                <div class="item active" style="background-image: url(images/slider/equipe_2018.jpg);background-position: top;">
                     <div class="container">
                         <div class="row slide-margin">
                             <div class="col-sm-6">
