updating projects links

--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                             <div class="col-xs-12 col-sm-10 blog-content">
                                 <h4>Material : Software</h4>
                                 <p></p>
-                                <p> - <a href="archives/seletiva2019software.pdf" target="blank">Project Description</a> </p>                                
+                                <p> - <a href="https://drive.google.com/file/d/1iKq5nthlSxDKwVFu3UD9wtsu3auTDpTj/view?usp=sharing" target="blank">Project Description</a> </p>                                
                                 <!-- <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >V-REP </a> Download</p>
                                 <p> 3. <a href="https://github.com/robocin/vrep-example" target="blank" >V-REP </a> Example</p>
                                 <p> 4. <a href="http://home.ifi.uio.no/paalh/dataset/alfheim/" target="blank" >Dataset </a>Soccer Video and Player Position</p>
@@ -103,7 +103,7 @@
                             <div class="col-sm-10 blog-content">
                                 <h4>Material : Mechanic</h4>
                                 <p></p>
-                                <p> - <a href="archives/seletiva2019mecanica.pdf" target="blank">Project Description</a> </p>
+                                <p> - <a href="https://drive.google.com/file/d/1qtFnLzIxLGXPOpinUD30YARKfJcjtbOX/view?usp=sharing" target="blank">Project Description</a> </p>
                                 <!-- <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
                                 <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
                                 <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
@@ -125,7 +125,7 @@
                             <div class="col-sm-10 blog-content">
                                 <h4>Material: Eletronic</h4>
                                 <p></p>
-                                <p> - <a href="archives/seletiva2019eletronica.pdf" target="blank">Project Description</a> </p>                                
+                                <p> - <a href="https://drive.google.com/file/d/1knNX62o_McHCFyscfHFoI01N_6BcXJ1w/view?usp=sharing" target="blank">Project Description</a> </p>                                
                                 <!-- <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
                                 <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
                                 <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
@@ -147,7 +147,7 @@
                             <div class="col-sm-10 blog-content">
                                 <h4>Material: Embedded Systems</h4>
                                 <p></p>
-                                <p> - <a href="archives/seletiva2019embarcados.pdf" target="blank">Project Description</a> </p>                                
+                                <p> - <a href="https://drive.google.com/file/d/1D-_CCC_eA_PYiNMl2NzmddKUNLXbQx1v/view?usp=sharing" target="blank">Project Description</a> </p>                                
                                 <!-- <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
                                 <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
                                 <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
