--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RobôCIn | Robotics Team</title>
-    <meta name="description" content="Robotics Team of UFPE">
+    <meta name="description" content="The robotics research group of the Center of Informatics of Federal University of Pernambuco.">
     <meta name="keywords" content="robot,robótica,larc,fira,obr,cin,ufpe,robocup">
     <link rel="icon" href="images/partners/cininho.png" width=100% >
 
