--- a/old_page/vsss.html
+++ b/old_page/vsss.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RobôCIn | Robotics Team</title>
-    <meta name="description" content="Robotics Team of UFPE">
+    <meta name="description" content="The robotics research group of the Center of Informatics of Federal University of Pernambuco.">
     <meta name="keywords" content="robot,robótica,larc,fira,obr,cin,ufpe,robocup">
     <link rel="icon" href="img/cininho.png" width=100% >
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
