updating project descriptions

--- a/projects.html
+++ b/projects.html
@@ -78,9 +78,9 @@
             <h4>
                 <ul>
                     <li>Os projetos devem ser realizados e apresentados <b>individualmente.</b></li>
-                    <li>Os candidatos devem escolher um projeto para realizar.</li>
+                    <li>Os candidatos devem escolher um projeto.</li>
                     <li>Os candidatos podem fazer mais do que o projeto solicita.</li>
-                    <li>A realização do projeto pode ser feita apenas para aqueles que participaram das entrevistas.</li>
+                    <li>A realização do projeto deve ser feita apenas por aqueles que participaram das entrevistas.</li>
                     <li>Data da apresentação dos projetos: Entre os dias 4 e 6 de novembro.</li>
                 </ul>
             </h4>
