Add LatinX Neurips 2019 Robocin DeepVSS Webpage

--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,7 @@
 								<li role="presentation"><a href="publications.html"  class="active">Publications</a></li>
 								<li role="presentation"><a href="team.html">Team</a></li>
 								<li role="presentation"><a href="projects.html">Projects</a></li>
+								<li role="presentation"><a href="deepvsss.html">Research</a></li>
 								<li role="presentation"><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
