--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
 								<li role="presentation"><a href="publications.html">Publications</a></li>
 								<li role="presentation"><a href="team.html" >Team</a></li>
 								<li role="presentation"><a href="projects.html">Projects</a></li>
+								<li role="presentation"><a href="deepvsss.html">Research</a></li>
 								<li role="presentation"><a href="contact.html" class="active">Contact</a></li>
 							</ul>
 						</div>
