--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
                                 <li role="presentation"><a href="publications.html">Publications</a></li>
                                 <li role="presentation"><a href="team.html">Team</a></li>
                                 <li role="presentation"><a href="projects.html" class="active">Projects</a></li>
+                                <li role="presentation"><a href="deepvsss.html">Research</a></li>
                                 <li role="presentation"><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
