Compress all images

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
             <div class="owl-carousel slide-one-item-alt">
-              <img src="images/sel.JPG" alt="Image" class="img-fluid">
-              <img src="images/res.JPG" alt="Image" class="img-fluid">
-              <img src="images/pes.JPG" alt="Image" class="img-fluid">
+              <img src="images/sel.jpg" alt="Image" class="img-fluid">
+              <img src="images/res.jpg" alt="Image" class="img-fluid">
+              <img src="images/pes.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="custom-direction">
               <a href="#" class="custom-prev"><span><span class="icon-keyboard_backspace"></span></span></a><a href="#" class="custom-next"><span><span class="icon-keyboard_backspace"></span></span></a>
