Fixed links and added github,

--- a/contato.html
+++ b/contato.html
@@ -115,9 +115,10 @@
               <div class="container text-center">
                 <div class="row mb-6 text-center mb-0">
                   <div class="col-md-12">
-                    <a href="https://pt-br.facebook.com/robocin/"><span class="icon-facebook d-block h2 text-secondary"></span></a>
-                    <a href="https://www.instagram.com/robocinufpe/"><span class="icon-instagram d-block h2 text-secondary"></span></a>
-                    <a href="#"><span class="icon-linkedin d-block h2 text-secondary"></span></a>
+                    <a target="blank" href="https://pt-br.facebook.com/robocin/"><span class="icon-facebook d-block h2 text-secondary"></span></a>
+                    <a target="blank" href="https://www.instagram.com/robocinufpe/"><span class="icon-instagram d-block h2 text-secondary"></span></a>
+                    <a target="blank" href="https://www.linkedin.com/company/robocin/?trk=ppro_cprof&originalSubdomain=br"><span class="icon-linkedin d-block h2 text-secondary"></span></a>
+                    <a target="blank" href="https://github.com/robocin"><span class="icon-github d-block h2 text-secondary"></span></a>  
                   </div>   
                 </div>
               </div>
