Fixing some minor problems on translation

--- a/seguidordelinha.html
+++ b/seguidordelinha.html
@@ -65,14 +65,14 @@
                 <li><a href="./index.html" class="nav-link" tkey="home"></a></li>
                 <li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" tkey="store"></a></li>
                 <li class="has-children">
-                    <a href="#" tkey="categ"></a>
-                    <ul class="dropdown">
-                      <li><a href="./seguidordelinha.html" tkey="lf"></a></li>
-                      <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="ssl"></a></li>
-                      <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="vsss"></a></li>
-                      <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
-                    </ul>
-                  </li>
+                  <a tkey="categ"></a>
+                  <ul class="dropdown">
+                    <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li>
+                    <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="cat.ssl"></a></li>
+                    <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="cat.vss"></a></li>
+                    <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
+                  </ul>
+                </li>
                 <li><a href="./membros.html" class="nav-link" tkey="members"></a></li>
                 <li><a href="./publicacoes.html" class="nav-link" tkey="papers"></a></li>
                   <li><a href="./seletiva.html" class="nav-link" tkey="join-us"></a></li>
@@ -140,8 +140,8 @@
               <div class="categories">
                 <h3 tkey="categ"></h3>
                 <li><a href="simulacao2d.html" tkey="cat.2d"></a></li>
-                <li><a href="smallsizeleague.html">Small size league</a></li>
-                <li><a href="verysmallsize.html">Very small size soccer</a></li>
+                <li><a href="smallsizeleague.html" tkey="cat.ssl"></a></li>
+                <li><a href="verysmallsize.html" tkey="cat.vss"></a></li>
               </div>
             </div>
           </div>
