Adding youtube button

--- a/contato.html
+++ b/contato.html
@@ -119,6 +119,7 @@
                     <a target="blank" href="https://www.instagram.com/robocinufpe/"><span class="icon-instagram d-block h2 text-secondary"></span></a>
                     <a target="blank" href="https://www.linkedin.com/company/robocin/?trk=ppro_cprof&originalSubdomain=br"><span class="icon-linkedin d-block h2 text-secondary"></span></a>
                     <a target="blank" href="https://github.com/robocin"><span class="icon-github d-block h2 text-secondary"></span></a>  
+                    <a target="blank" href="https://www.youtube.com/channel/UCi21SoE4Q4y4_i27VOCUdTw"><span class="icon-youtube-play d-block h2 text-secondary"></span></a>
                   </div>   
                 </div>
               </div>
